--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.51",
+    "@types/create-react-class": "^15.6.1",
+    "@types/react": "^16.4.7",
     "antd": "^3.6.2",
     "dob": "^2.5.9",
     "dob-react": "^2.4.15",
@@ -16,12 +18,16 @@
     "gaea-render": "^1.0.17",
     "keymaster": "^1.6.2",
     "lodash": "^4.17.10",
+    "react": "^16.4.2",
     "react-color": "^2.14.1",
+    "react-dom": "^16.4.2",
     "sortablejs": "^1.7.0",
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
-    "@types/classnames": "*"
+    "@types/classnames": "*",
+    "@types/node": "^10.5.5",
+    "@types/prop-types": "^15.5.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
